--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "node-sass": "^4.5.3",
     "npm-run-all": "^4.1.1",
     "postcss-cli": "^4.1.1",
-    "mem": ">=4.0.0"
+    "mem": ">=4.0.0",
+    "braces": ">=2.3.1"
   }
 }
